--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
     name: Run Monitoring Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Unlock git-crypt
         uses: sliteteam/github-action-git-crypt-unlock@1.3.0
@@ -22,7 +22,7 @@ jobs:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 22
 
@@ -57,7 +57,7 @@ jobs:
 
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: test-results/
@@ -82,15 +82,15 @@ jobs:
         id: test-results
         if: steps.playwright-test.outcome == 'failure'
         run: |
-          cat test-results/test-results.json | jq '.suites[].specs[] | .title + ":" + .tests[].results[].status' > test-results/results.txt
+          jq '.suites[].specs[] | .title + ":" + .tests[].results[].status' test-results/test-results.json > test-results/results.txt
           FAILED_TESTS=$(grep -o "Dashboard application health check.*failed" test-results/results.txt || echo "")
-          if [[ ! -z "$FAILED_TESTS" ]]; then
-            echo "::set-output name=app_failure::dashboard"
+          if [[ -n "$FAILED_TESTS" ]]; then
+            echo "app_failure=dashboard" >> "$GITHUB_OUTPUT"
           fi
 
           FAILED_TESTS=$(grep -o "Indexer application health check.*failed" test-results/results.txt || echo "")
-          if [[ ! -z "$FAILED_TESTS" ]]; then
-            echo "::set-output name=app_failure::indexer"
+          if [[ -n "$FAILED_TESTS" ]]; then
+            echo "app_failure=indexer" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Send application test failure notification
@@ -102,7 +102,7 @@ jobs:
         with:
           status: 'failed'
           title: '${{ steps.test-results.outputs.app_failure }} monitoring'
-          message: '${{ steps.test-results.outputs.app_failure == "dashboard" && "Dashboard" || "Indexer" }} application monitoring failed'
+          message: ${{ steps.test-results.outputs.app_failure == 'dashboard' && 'Dashboard' || 'Indexer' }} application monitoring failed
 
       - name: Send workflow failure notification
         uses: umahmood/pushover-actions@main
